--- a/All.bib
+++ b/All.bib
@@ -245,6 +245,24 @@
   url		= {https://doi.org/10.4064/sm182-3-7}
 }
 
+@Article{	  acosta.chen:98:moderate,
+  author	= {de Acosta, A. and Chen, Xia},
+  title		= {Moderate deviations for empirical measures of {M}arkov
+		  chains: upper bounds},
+  journal	= {J. Theoret. Probab.},
+  fjournal	= {Journal of Theoretical Probability},
+  volume	= {11},
+  year		= {1998},
+  number	= {4},
+  pages		= {1075--1110},
+  issn		= {0894-9840},
+  mrclass	= {60F10 (60J10)},
+  mrnumber	= {1660920},
+  mrreviewer	= {Miguel A. Arcones},
+  doi		= {10.1023/A:1022673000778},
+  url		= {https://doi.org/10.1023/A:1022673000778}
+}
+
 @Book{		  adams.fournier:03:sobolev,
   author	= {Adams, Robert A. and Fournier, John J. F.},
   title		= {Sobolev spaces},
@@ -4167,6 +4185,42 @@
   url		= {http://links.jstor.org/sici?sici=0091-1798(199404)22:2<566:ILTFPO>2.0.CO;2-R&origin=MSN}
 }
 
+@Article{	  bass.chen.ea:05:large,
+  author	= {Bass, Richard and Chen, Xia and Rosen, Jay},
+  title		= {Large deviations for renormalized self-intersection local
+		  times of stable processes},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {33},
+  year		= {2005},
+  number	= {3},
+  pages		= {984--1013},
+  issn		= {0091-1798},
+  mrclass	= {60J55 (60F10 60G52)},
+  mrnumber	= {2135310},
+  mrreviewer	= {Michele Zito},
+  doi		= {10.1214/009117904000001099},
+  url		= {https://doi.org/10.1214/009117904000001099}
+}
+
+@Article{	  bass.chen.ea:06:moderate,
+  author	= {Bass, Richard F. and Chen, Xia and Rosen, Jay},
+  title		= {Moderate deviations and laws of the iterated logarithm for
+		  the renormalized self-intersection local times of planar
+		  random walks},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {11},
+  year		= {2006},
+  pages		= {no. 37, 993--1030},
+  issn		= {1083-6489},
+  mrclass	= {60F10 (60J55 60J65)},
+  mrnumber	= {2261059},
+  mrreviewer	= {Firas Rassoul-Agha},
+  doi		= {10.1214/EJP.v11-362},
+  url		= {https://doi.org/10.1214/EJP.v11-362}
+}
+
 @Article{	  bass.chen.ea:09:large,
   author	= {Bass, Richard and Chen, Xia and Rosen, Jay},
   title		= {Large deviations for {R}iesz potentials of additive
@@ -4184,6 +4238,24 @@
   mrreviewer	= {Zakhar Kabluchko},
   doi		= {10.1214/08-AIHP181},
   url		= {https://doi.org/10.1214/08-AIHP181}
+}
+
+@Article{	  bass.chen.ea:09:moderate,
+  author	= {Bass, Richard F. and Chen, Xia and Rosen, Jay},
+  title		= {Moderate deviations for the range of planar random walks},
+  journal	= {Mem. Amer. Math. Soc.},
+  fjournal	= {Memoirs of the American Mathematical Society},
+  volume	= {198},
+  year		= {2009},
+  number	= {929},
+  pages		= {viii+82},
+  issn		= {0065-9266},
+  isbn		= {978-0-8218-4287-4},
+  mrclass	= {60F10 (60G50 60J55)},
+  mrnumber	= {2493313},
+  mrreviewer	= {Endre Cs\'{a}ki},
+  doi		= {10.1090/memo/0929},
+  url		= {https://doi.org/10.1090/memo/0929}
 }
 
 @Article{	  bass.chen:01:stochastic,
@@ -4984,6 +5056,23 @@
   pages		= {x+207},
   mrclass	= {46M35},
   mrnumber	= {0482275}
+}
+
+@Article{	  berkes.chen.ea:01:central,
+  author	= {Berkes, I. and Chen, X. and Horv\'{a}th, L.},
+  title		= {Central limit theorems for logarithmic averages},
+  journal	= {Studia Sci. Math. Hungar.},
+  fjournal	= {Studia Scientiarum Mathematicarum Hungarica.
+		  Combinatorics, Geometry and Topology (CoGeTo)},
+  volume	= {38},
+  year		= {2001},
+  pages		= {79--96},
+  issn		= {0081-6906},
+  mrclass	= {60F17 (60F05 60F15 60G50)},
+  mrnumber	= {1877771},
+  mrreviewer	= {N. R. Mohan},
+  doi		= {10.1556/SScMath.38.2001.1-4.6},
+  url		= {https://doi.org/10.1556/SScMath.38.2001.1-4.6}
 }
 
 @Article{	  berkes.horvath.ea:98:logarithmic,
@@ -6342,6 +6431,23 @@
 @Article{	  borodin.corwin.ea:15:spectral,
   author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
 		  Sasamoto, Tomohiro},
+  title		= {Spectral theory for the {$q$}-{B}oson particle system},
+  journal	= {Compos. Math.},
+  fjournal	= {Compositio Mathematica},
+  volume	= {151},
+  year		= {2015},
+  number	= {1},
+  pages		= {1--67},
+  issn		= {0010-437X},
+  mrclass	= {82B23 (05E05)},
+  mrnumber	= {3305308},
+  doi		= {10.1112/S0010437X14007532},
+  url		= {https://doi.org/10.1112/S0010437X14007532}
+}
+
+@Article{	  borodin.corwin.ea:15:spectral*1,
+  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
+		  Sasamoto, Tomohiro},
   title		= {Spectral theory for interacting particle systems solvable
 		  by coordinate {B}ethe ansatz},
   journal	= {Comm. Math. Phys.},
@@ -6355,23 +6461,6 @@
   mrnumber	= {3385995},
   doi		= {10.1007/s00220-015-2424-7},
   url		= {https://doi.org/10.1007/s00220-015-2424-7}
-}
-
-@Article{	  borodin.corwin.ea:15:spectral*1,
-  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
-		  Sasamoto, Tomohiro},
-  title		= {Spectral theory for the {$q$}-{B}oson particle system},
-  journal	= {Compos. Math.},
-  fjournal	= {Compositio Mathematica},
-  volume	= {151},
-  year		= {2015},
-  number	= {1},
-  pages		= {1--67},
-  issn		= {0010-437X},
-  mrclass	= {82B23 (05E05)},
-  mrnumber	= {3305308},
-  doi		= {10.1112/S0010437X14007532},
-  url		= {https://doi.org/10.1112/S0010437X14007532}
 }
 
 @Article{	  borodin.corwin.ea:16:observables,
@@ -6483,19 +6572,7 @@
   url		= {https://doi.org/10.1007/s11040-021-09380-8}
 }
 
-@InCollection{	  borodin.corwin:14:macdonald,
-  author	= {Borodin, A. and Corwin, I.},
-  title		= {Macdonald processes},
-  booktitle	= {X{VII}th {I}nternational {C}ongress on {M}athematical
-		  {P}hysics},
-  pages		= {292--316},
-  publisher	= {World Sci. Publ., Hackensack, NJ},
-  year		= {2014},
-  mrclass	= {60K35 (60B99 82B23 82C22)},
-  mrnumber	= {3204480}
-}
-
-@Article{	  borodin.corwin:14:macdonald*1,
+@Article{	  borodin.corwin:14:macdonald,
   author	= {Borodin, Alexei and Corwin, Ivan},
   title		= {Macdonald processes},
   journal	= {Probab. Theory Related Fields},
@@ -6510,6 +6587,18 @@
   mrreviewer	= {Rongfeng Sun},
   doi		= {10.1007/s00440-013-0482-3},
   url		= {https://doi.org/10.1007/s00440-013-0482-3}
+}
+
+@InCollection{	  borodin.corwin:14:macdonald*1,
+  author	= {Borodin, A. and Corwin, I.},
+  title		= {Macdonald processes},
+  booktitle	= {X{VII}th {I}nternational {C}ongress on {M}athematical
+		  {P}hysics},
+  pages		= {292--316},
+  publisher	= {World Sci. Publ., Hackensack, NJ},
+  year		= {2014},
+  mrclass	= {60K35 (60B99 82B23 82C22)},
+  mrnumber	= {3204480}
 }
 
 @Article{	  borodin.corwin:14:moments,
@@ -7885,7 +7974,22 @@
   url		= {https://doi.org/10.2307/2154895}
 }
 
-@Article{	  cairoli.dalang:95:optimal,
+@InCollection{	  cairoli.dalang:95:optimal,
+  author	= {Cairoli, R. and Dalang, Robert C.},
+  title		= {Optimal switching between two {B}rownian motions},
+  booktitle	= {Stochastic analysis ({I}thaca, {NY}, 1993)},
+  series	= {Proc. Sympos. Pure Math.},
+  volume	= {57},
+  pages		= {53--63},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {1995},
+  mrclass	= {60G40 (60J65)},
+  mrnumber	= {1335462},
+  doi		= {10.1090/pspum/057/1335462},
+  url		= {https://doi.org/10.1090/pspum/057/1335462}
+}
+
+@Article{	  cairoli.dalang:95:optimal*1,
   author	= {Cairoli, R. and Dalang, Robert C.},
   title		= {Optimal switching between two random walks},
   journal	= {Ann. Probab.},
@@ -7899,21 +8003,6 @@
   mrnumber	= {1379177},
   mrreviewer	= {H.-J. Engelbert},
   url		= {http://links.jstor.org/sici?sici=0091-1798(199510)23:4<1982:OSBTRW>2.0.CO;2-P&origin=MSN}
-}
-
-@InCollection{	  cairoli.dalang:95:optimal*1,
-  author	= {Cairoli, R. and Dalang, Robert C.},
-  title		= {Optimal switching between two {B}rownian motions},
-  booktitle	= {Stochastic analysis ({I}thaca, {NY}, 1993)},
-  series	= {Proc. Sympos. Pure Math.},
-  volume	= {57},
-  pages		= {53--63},
-  publisher	= {Amer. Math. Soc., Providence, RI},
-  year		= {1995},
-  mrclass	= {60G40 (60J65)},
-  mrnumber	= {1335462},
-  doi		= {10.1090/pspum/057/1335462},
-  url		= {https://doi.org/10.1090/pspum/057/1335462}
 }
 
 @Book{		  cairoli.dalang:96:sequential,
@@ -9673,6 +9762,7 @@
   issn		= {0304-4149},
   mrclass	= {60H15 (60G15 60G22 60L20)},
   mrnumber	= {4158800},
+  mrreviewer	= {Yaozhong Hu},
   doi		= {10.1016/j.spa.2020.06.007},
   url		= {https://doi.org/10.1016/j.spa.2020.06.007}
 }
@@ -9990,6 +10080,25 @@
   url		= {https://doi.org/10.1214/14-AOP954}
 }
 
+@Article{	  chen.deya.ea:21:k-rough,
+  author	= {Chen, Xia and Deya, Aur\'{e}lien and Ouyang, Cheng and
+		  Tindel, Samy},
+  title		= {A {$K$}-rough path above the space-time fractional
+		  {B}rownian motion},
+  journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
+  fjournal	= {Stochastic Partial Differential Equations. Analysis and
+		  Computations},
+  volume	= {9},
+  year		= {2021},
+  number	= {4},
+  pages		= {819--866},
+  issn		= {2194-0401},
+  mrclass	= {60L30 (60F10 60K37 60L50)},
+  mrnumber	= {4333504},
+  doi		= {10.1007/s40072-020-00186-3},
+  url		= {https://doi.org/10.1007/s40072-020-00186-3}
+}
+
 @Article{	  chen.deya.ea:21:moment,
   author	= {Chen, Xia and Deya, Aur\'{e}lien and Ouyang, Cheng and
 		  Tindel, Samy},
@@ -10004,6 +10113,7 @@
   issn		= {0091-1798},
   mrclass	= {60L30 (60F10 60K37 60L50)},
   mrnumber	= {4317714},
+  mrreviewer	= {Adam Matthew Bowditch},
   doi		= {10.1214/21-aop1517},
   url		= {https://doi.org/10.1214/21-aop1517}
 }
@@ -10144,6 +10254,25 @@
   mrnumber	= {2962095},
   doi		= {10.1214/11-AOP684},
   url		= {https://doi.org/10.1214/11-AOP684}
+}
+
+@Article{	  chen.guillin:04:functional,
+  author	= {Chen, Xia and Guillin, Arnaud},
+  title		= {The functional moderate deviations for {H}arris recurrent
+		  {M}arkov chains and applications},
+  journal	= {Ann. Inst. H. Poincar\'{e} Probab. Statist.},
+  fjournal	= {Annales de l'Institut Henri Poincar\'{e}. Probabilit\'{e}s
+		  et Statistiques},
+  volume	= {40},
+  year		= {2004},
+  number	= {1},
+  pages		= {89--124},
+  issn		= {0246-0203},
+  mrclass	= {60J55 (60F10 60F15 60F17)},
+  mrnumber	= {2037475},
+  mrreviewer	= {Karl Grill},
+  doi		= {10.1016/S0246-0203(03)00061-X},
+  url		= {https://doi.org/10.1016/S0246-0203(03)00061-X}
 }
 
 @Article{	  chen.guo.ea:22:moments,
@@ -10645,6 +10774,39 @@
   url		= {https://doi.org/10.1214/20-ejp541}
 }
 
+@Article{	  chen.kuelbs.ea:00:functional,
+  author	= {Chen, Xia and Kuelbs, James and Li, Wenbo},
+  title		= {A functional {LIL} for symmetric stable processes},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {28},
+  year		= {2000},
+  number	= {1},
+  pages		= {258--276},
+  issn		= {0091-1798},
+  mrclass	= {60F17 (60G17 60G52 60G70)},
+  mrnumber	= {1756005},
+  mrreviewer	= {Endre Cs\'{a}ki},
+  doi		= {10.1214/aop/1019160119},
+  url		= {https://doi.org/10.1214/aop/1019160119}
+}
+
+@Article{	  chen.kulik:11:asymptotics,
+  author	= {Chen, Xia and Kulik, Alexey},
+  title		= {Asymptotics of negative exponential moments for annealed
+		  {B}rownian motion in a renormalized {P}oisson potential},
+  journal	= {Int. J. Stoch. Anal.},
+  fjournal	= {International Journal of Stochastic Analysis},
+  year		= {2011},
+  pages		= {Art. ID 803683, 43},
+  issn		= {2090-3332},
+  mrclass	= {60K37 (60F10 60G60 60H25 60J45 60J65)},
+  mrnumber	= {2812672},
+  mrreviewer	= {Yueyun Hu},
+  doi		= {10.1155/2011/803683},
+  url		= {https://doi.org/10.1155/2011/803683}
+}
+
 @Article{	  chen.kulik:12:brownian,
   author	= {Chen, Xia and Kulik, Alexey M.},
   title		= {Brownian motion and parabolic {A}nderson model in a
@@ -10697,6 +10859,97 @@
   mrreviewer	= {Ofer Zeitouni},
   doi		= {10.1214/EJP.v10-260},
   url		= {https://doi.org/10.1214/EJP.v10-260}
+}
+
+@Article{	  chen.li.ea:10:clt,
+  author	= {Chen, Xia and Li, Wenbo V. and Marcus, Michael B. and
+		  Rosen, Jay},
+  title		= {A {CLT} for the {$L^2$} modulus of continuity of
+		  {B}rownian local time},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {38},
+  year		= {2010},
+  number	= {1},
+  pages		= {396--438},
+  issn		= {0091-1798},
+  mrclass	= {60J55 (60F05 60G17 60J65)},
+  mrnumber	= {2599604},
+  mrreviewer	= {Tam\'{a}s Szabados},
+  doi		= {10.1214/09-AOP486},
+  url		= {https://doi.org/10.1214/09-AOP486}
+}
+
+@Article{	  chen.li.ea:11:large,
+  author	= {Chen, Xia and Li, Wenbo V. and Rosi\'{n}ski, Jan and Shao,
+		  Qi-Man},
+  title		= {Large deviations for local times and intersection local
+		  times of fractional {B}rownian motions and
+		  {R}iemann-{L}iouville processes},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {39},
+  year		= {2011},
+  number	= {2},
+  pages		= {729--778},
+  issn		= {0091-1798},
+  mrclass	= {60G22 (60F10 60G15 60G18 60J55)},
+  mrnumber	= {2789511},
+  mrreviewer	= {Ren\'{e} L. Schilling},
+  doi		= {10.1214/10-AOP566},
+  url		= {https://doi.org/10.1214/10-AOP566}
+}
+
+@InCollection{	  chen.li:02:limiting,
+  author	= {Chen, Xia and Li, Wenbo V.},
+  title		= {Limiting behaviors for {B}rownian motion reflected on
+		  {B}rownian motion},
+  note		= {Special issue dedicated to Daniel W. Stroock and Srinivasa
+		  S. R. Varadhan on the occasion of their 60th birthday},
+  journal	= {Methods Appl. Anal.},
+  fjournal	= {Methods and Applications of Analysis},
+  volume	= {9},
+  year		= {2002},
+  number	= {3},
+  pages		= {377--391},
+  issn		= {1073-2772},
+  mrclass	= {60J65},
+  mrnumber	= {2023131},
+  mrreviewer	= {Robert G. Smits},
+  doi		= {10.4310/MAA.2002.v9.n3.a5},
+  url		= {https://doi.org/10.4310/MAA.2002.v9.n3.a5}
+}
+
+@Article{	  chen.li:03:quadratic,
+  author	= {Chen, Xia and Li, Wenbo V.},
+  title		= {Quadratic functionals and small ball probabilities for the
+		  {$m$}-fold integrated {B}rownian motion},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {31},
+  year		= {2003},
+  number	= {2},
+  pages		= {1052--1077},
+  issn		= {0091-1798},
+  mrclass	= {60G15 (60J25 60J60 60J65)},
+  mrnumber	= {1964958},
+  mrreviewer	= {Gh. Opri\c{s}an},
+  doi		= {10.1214/aop/1048516545},
+  url		= {https://doi.org/10.1214/aop/1048516545}
+}
+
+@InCollection{	  chen.li:03:small,
+  author	= {Chen, Xia and Li, Wenbo V.},
+  title		= {Small deviation estimates for some additive processes},
+  booktitle	= {High dimensional probability, {III} ({S}andjberg, 2002)},
+  series	= {Progr. Probab.},
+  volume	= {55},
+  pages		= {225--238},
+  publisher	= {Birkh\"{a}user, Basel},
+  year		= {2003},
+  mrclass	= {60G60 (60F15 60G17)},
+  mrnumber	= {2033891},
+  mrreviewer	= {Alexander V. Bulinskiu{i}}
 }
 
 @Article{	  chen.li:04:large,
@@ -10769,6 +11022,25 @@
   url		= {https://doi.org/10.1016/j.jmaa.2012.04.032}
 }
 
+@Article{	  chen.morters:09:upper,
+  author	= {Chen, Xia and M\"{o}rters, Peter},
+  title		= {Upper tails for intersection local times of random walks
+		  in supercritical dimensions},
+  journal	= {J. Lond. Math. Soc. (2)},
+  fjournal	= {Journal of the London Mathematical Society. Second
+		  Series},
+  volume	= {79},
+  year		= {2009},
+  number	= {1},
+  pages		= {186--210},
+  issn		= {0024-6107},
+  mrclass	= {60F10 (60G50 60K35)},
+  mrnumber	= {2472140},
+  mrreviewer	= {Jean B\'{e}rard},
+  doi		= {10.1112/jlms/jdn074},
+  url		= {https://doi.org/10.1112/jlms/jdn074}
+}
+
 @Article{	  chen.nourdin.ea:21:steins,
   author	= {Chen, Peng and Nourdin, Ivan and Xu, Lihu},
   title		= {Stein's method for asymmetric {$\alpha$}-stable
@@ -10837,6 +11109,25 @@
   mrreviewer	= {Zhi Ming Ma},
   doi		= {10.1006/jfan.1997.3147},
   url		= {https://doi.org/10.1006/jfan.1997.3147}
+}
+
+@Article{	  chen.rosen:05:exponential,
+  author	= {Chen, Xia and Rosen, Jay},
+  title		= {Exponential asymptotics for intersection local times of
+		  stable processes and random walks},
+  journal	= {Ann. Inst. H. Poincar\'{e} Probab. Statist.},
+  fjournal	= {Annales de l'Institut Henri Poincar\'{e}. Probabilit\'{e}s
+		  et Statistiques},
+  volume	= {41},
+  year		= {2005},
+  number	= {5},
+  pages		= {901--928},
+  issn		= {0246-0203},
+  mrclass	= {60J55 (60G50 60G52)},
+  mrnumber	= {2165257},
+  mrreviewer	= {Ingo Fahrner},
+  doi		= {10.1016/j.anihpb.2004.09.006},
+  url		= {https://doi.org/10.1016/j.anihpb.2004.09.006}
 }
 
 @Article{	  chen.rosen:10:large,
@@ -10945,6 +11236,92 @@
   url		= {https://doi.org/10.1090/S0002-9939-2014-11907-1}
 }
 
+@Article{	  chen:00:chungs,
+  author	= {Chen, Xia},
+  title		= {Chung's law for additive functionals of positive recurrent
+		  {M}arkov chains},
+  journal	= {Statist. Probab. Lett.},
+  fjournal	= {Statistics \& Probability Letters},
+  volume	= {47},
+  year		= {2000},
+  number	= {3},
+  pages		= {253--264},
+  issn		= {0167-7152},
+  mrclass	= {60F15 (60J05)},
+  mrnumber	= {1747486},
+  mrreviewer	= {Endre Cs\'{a}ki},
+  doi		= {10.1016/S0167-7152(99)00163-7},
+  url		= {https://doi.org/10.1016/S0167-7152(99)00163-7}
+}
+
+@Article{	  chen:00:on,
+  author	= {Chen, Xia},
+  title		= {On the limit laws of the second order for additive
+		  functionals of {H}arris recurrent {M}arkov chains},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {116},
+  year		= {2000},
+  number	= {1},
+  pages		= {89--123},
+  issn		= {0178-8051},
+  mrclass	= {60J05 (60F05 60F15)},
+  mrnumber	= {1736591},
+  doi		= {10.1007/PL00008724},
+  url		= {https://doi.org/10.1007/PL00008724}
+}
+
+@InCollection{	  chen:00:on*1,
+  author	= {Chen, Xia},
+  title		= {On the law of the iterated logarithm for local times of
+		  recurrent random walks},
+  booktitle	= {High dimensional probability, {II} ({S}eattle, {WA},
+		  1999)},
+  series	= {Progr. Probab.},
+  volume	= {47},
+  pages		= {249--259},
+  publisher	= {Birkh\"{a}user Boston, Boston, MA},
+  year		= {2000},
+  mrclass	= {60F15 (60J55)},
+  mrnumber	= {1857326},
+  mrreviewer	= {Ingemar Kaj}
+}
+
+@Article{	  chen:01:exact,
+  author	= {Chen, Xia},
+  title		= {Exact convergence rates for the distribution of particles
+		  in branching random walks},
+  journal	= {Ann. Appl. Probab.},
+  fjournal	= {The Annals of Applied Probability},
+  volume	= {11},
+  year		= {2001},
+  number	= {4},
+  pages		= {1242--1262},
+  issn		= {1050-5164},
+  mrclass	= {60J80 (60F15 60F25 60G50)},
+  mrnumber	= {1878297},
+  mrreviewer	= {M. Iosifescu},
+  doi		= {10.1214/aoap/1015345402},
+  url		= {https://doi.org/10.1214/aoap/1015345402}
+}
+
+@Article{	  chen:01:moderate,
+  author	= {Chen, Xia},
+  title		= {Moderate deviations for {M}arkovian occupation times},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {94},
+  year		= {2001},
+  number	= {1},
+  pages		= {51--70},
+  issn		= {0304-4149},
+  mrclass	= {60F10 (60F15 60J55)},
+  mrnumber	= {1835845},
+  mrreviewer	= {Gh. Opri\c{s}an},
+  doi		= {10.1016/S0304-4149(01)00079-5},
+  url		= {https://doi.org/10.1016/S0304-4149(01)00079-5}
+}
+
 @Article{	  chen:04:exponential,
   author	= {Chen, Xia},
   title		= {Exponential asymptotics and law of the iterated logarithm
@@ -10961,6 +11338,130 @@
   mrreviewer	= {Nadine Guillotin-Plantard},
   doi		= {10.1214/009117904000000513},
   url		= {https://doi.org/10.1214/009117904000000513}
+}
+
+@Article{	  chen:05:moderate,
+  author	= {Chen, Xia},
+  title		= {Moderate deviations and law of the iterated logarithm for
+		  intersections of the ranges of random walks},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {33},
+  year		= {2005},
+  number	= {3},
+  pages		= {1014--1059},
+  issn		= {0091-1798},
+  mrclass	= {60F10 (60F15 60G50 60J10)},
+  mrnumber	= {2135311},
+  mrreviewer	= {S. A. Book},
+  doi		= {10.1214/009117905000000035},
+  url		= {https://doi.org/10.1214/009117905000000035}
+}
+
+@Article{	  chen:06:moderate,
+  author	= {Chen, Xia},
+  title		= {Moderate and small deviations for the ranges of
+		  one-dimensional random walks},
+  journal	= {J. Theoret. Probab.},
+  fjournal	= {Journal of Theoretical Probability},
+  volume	= {19},
+  year		= {2006},
+  number	= {3},
+  pages		= {721--739},
+  issn		= {0894-9840},
+  mrclass	= {60F10 (60F15 60G50)},
+  mrnumber	= {2280517},
+  mrreviewer	= {S. A. Book},
+  doi		= {10.1007/s10959-006-0032-3},
+  url		= {https://doi.org/10.1007/s10959-006-0032-3}
+}
+
+@Article{	  chen:06:self-intersection,
+  author	= {Chen, Xia},
+  title		= {Self-intersection local times of additive processes: large
+		  deviation and law of the iterated logarithm},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {116},
+  year		= {2006},
+  number	= {9},
+  pages		= {1236--1253},
+  issn		= {0304-4149},
+  mrclass	= {60F10 (60F15 60G52 60J55)},
+  mrnumber	= {2251543},
+  doi		= {10.1016/j.spa.2006.02.001},
+  url		= {https://doi.org/10.1016/j.spa.2006.02.001}
+}
+
+@Article{	  chen:07:large,
+  author	= {Chen, Xia},
+  title		= {Large deviations and laws of the iterated logarithm for
+		  the local times of additive stable processes},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {35},
+  year		= {2007},
+  number	= {2},
+  pages		= {602--648},
+  issn		= {0091-1798},
+  mrclass	= {60G52 (60F10 60F15 60J55)},
+  mrnumber	= {2308590},
+  mrreviewer	= {Peter M\"{o}rters},
+  doi		= {10.1214/009117906000000601},
+  url		= {https://doi.org/10.1214/009117906000000601}
+}
+
+@Article{	  chen:07:moderate,
+  author	= {Chen, Xia},
+  title		= {Moderate deviations and laws of the iterated logarithm for
+		  the local times of additive {L}\'{e}vy processes and
+		  additive random walks},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {35},
+  year		= {2007},
+  number	= {3},
+  pages		= {954--1006},
+  issn		= {0091-1798},
+  mrclass	= {60F10 (60F15 60G52 60J55)},
+  mrnumber	= {2319713},
+  mrreviewer	= {Firas Rassoul-Agha},
+  doi		= {10.1214/009117906000000520},
+  url		= {https://doi.org/10.1214/009117906000000520}
+}
+
+@InCollection{	  chen:08:intersection,
+  author	= {Chen, Xia},
+  title		= {Intersection local times: large deviations and laws of the
+		  iterated logarithm},
+  booktitle	= {Asymptotic theory in probability and statistics with
+		  applications},
+  series	= {Adv. Lect. Math. (ALM)},
+  volume	= {2},
+  pages		= {195--253},
+  publisher	= {Int. Press, Somerville, MA},
+  year		= {2008},
+  mrclass	= {60J55 (60F10 60F15)},
+  mrnumber	= {2466987},
+  mrreviewer	= {Peter M\"{o}rters}
+}
+
+@Article{	  chen:08:limit,
+  author	= {Chen, Xia},
+  title		= {Limit laws for the energy of a charged polymer},
+  journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
+  fjournal	= {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s
+		  et Statistiques},
+  volume	= {44},
+  year		= {2008},
+  number	= {4},
+  pages		= {638--672},
+  issn		= {0246-0203},
+  mrclass	= {60F05 (60F10 60F15 82D60)},
+  mrnumber	= {2446292},
+  mrreviewer	= {Firas Rassoul-Agha},
+  doi		= {10.1214/07-AIHP120},
+  url		= {https://doi.org/10.1214/07-AIHP120}
 }
 
 @Book{		  chen:10:random,
@@ -11204,6 +11705,224 @@
   mrreviewer	= {Kunwoo Kim},
   doi		= {10.1214/19-AIHP983},
   url		= {https://doi.org/10.1214/19-AIHP983}
+}
+
+@Article{	  chen:90:moderate,
+  author	= {Chen, Xia},
+  title		= {Moderate deviations of {$B$}-valued independent random
+		  vectors},
+  journal	= {Chinese Ann. Math. Ser. A},
+  fjournal	= {Chinese Annals of Mathematics. Series A. Shuxue Niankan. A
+		  Ji},
+  volume	= {11},
+  year		= {1990},
+  number	= {5},
+  pages		= {621--629},
+  issn		= {1000-8314},
+  mrclass	= {60B12 (60F10)},
+  mrnumber	= {1092054},
+  mrreviewer	= {Zheng Yan Lin}
+}
+
+@Article{	  chen:91:moderate,
+  author	= {Chen, Xia},
+  title		= {Moderate deviations of independent random vectors in a
+		  {B}anach space},
+  journal	= {Chinese J. Appl. Probab. Statist.},
+  fjournal	= {Chinese Journal of Applied Probability and Statistics.
+		  Yingyong Gail\"{u} Tongji},
+  volume	= {7},
+  year		= {1991},
+  number	= {1},
+  pages		= {24--32},
+  mrclass	= {60B12 (60F10)},
+  mrnumber	= {1204537}
+}
+
+@Article{	  chen:93:kolmogorovs,
+  author	= {Chen, Xia},
+  title		= {Kolmogorov's law of the iterated logarithm for
+		  {$B$}-valued random elements and empirical processes},
+  journal	= {Acta Math. Sinica},
+  fjournal	= {Acta Mathematica Sinica. Shuxue Xuebao},
+  volume	= {36},
+  year		= {1993},
+  number	= {5},
+  pages		= {600--619},
+  issn		= {0583-1431},
+  mrclass	= {60B12 (60F15)},
+  mrnumber	= {1261945},
+  mrreviewer	= {Deli Li}
+}
+
+@Article{	  chen:93:on,
+  author	= {Chen, Xia},
+  title		= {On the law of the iterated logarithm for independent
+		  {B}anach space valued random variables},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {21},
+  year		= {1993},
+  number	= {4},
+  pages		= {1991--2011},
+  issn		= {0091-1798},
+  mrclass	= {60B12 (60F15)},
+  mrnumber	= {1245298},
+  mrreviewer	= {Iosif Pinelis},
+  url		= {http://links.jstor.org/sici?sici=0091-1798(199310)21:4<1991:OTLOTI>2.0.CO;2-#&origin=MSN}
+}
+
+@Article{	  chen:94:on,
+  author	= {Chen, Xia},
+  title		= {On {S}trassen's law of the iterated logarithm in {B}anach
+		  space},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {22},
+  year		= {1994},
+  number	= {2},
+  pages		= {1026--1043},
+  issn		= {0091-1798},
+  mrclass	= {60B12 (60F15)},
+  mrnumber	= {1288141},
+  mrreviewer	= {Igor S. Borisov},
+  url		= {http://links.jstor.org/sici?sici=0091-1798(199404)22:2<1026:OSLOTI>2.0.CO;2-S&origin=MSN}
+}
+
+@Article{	  chen:95:fellers,
+  author	= {Chen, Xia},
+  title		= {Feller's law of the iterated logarithm in {B}anach
+		  spaces},
+  journal	= {Chinese Ann. Math. Ser. A},
+  fjournal	= {Chinese Annals of Mathematics. Series A. Shuxue Niankan. A
+		  Ji},
+  volume	= {16},
+  year		= {1995},
+  number	= {2},
+  pages		= {251--258},
+  issn		= {1000-8314},
+  mrclass	= {60B12 (60F15)},
+  mrnumber	= {1341939}
+}
+
+@Article{	  chen:97:law,
+  author	= {Chen, Xia},
+  title		= {The law of the iterated logarithm for {$m$}-dependent
+		  {B}anach space valued random variables},
+  journal	= {J. Theoret. Probab.},
+  fjournal	= {Journal of Theoretical Probability},
+  volume	= {10},
+  year		= {1997},
+  number	= {3},
+  pages		= {695--732},
+  issn		= {0894-9840},
+  mrclass	= {60B12},
+  mrnumber	= {1468400},
+  mrreviewer	= {Nickolai A. Denis\cprime evskiu{i}},
+  doi		= {10.1023/A:1022605812085},
+  url		= {https://doi.org/10.1023/A:1022605812085}
+}
+
+@Book{		  chen:97:limit,
+  author	= {Chen, Xia},
+  title		= {Limit theorems for functionals of ergodic {M}arkov chains
+		  with general state space},
+  note		= {Thesis (Ph.D.)--Case Western Reserve University},
+  publisher	= {ProQuest LLC, Ann Arbor, MI},
+  year		= {1997},
+  pages		= {200},
+  isbn		= {978-0591-63876-9},
+  mrclass	= {Thesis},
+  mrnumber	= {2696713},
+  url		= {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:9813015}
+}
+
+@Article{	  chen:97:moderate,
+  author	= {Chen, Xia},
+  title		= {Moderate deviations for {$m$}-dependent random variables
+		  with {B}anach space values},
+  journal	= {Statist. Probab. Lett.},
+  fjournal	= {Statistics \& Probability Letters},
+  volume	= {35},
+  year		= {1997},
+  number	= {2},
+  pages		= {123--134},
+  issn		= {0167-7152},
+  mrclass	= {60B12 (60F10)},
+  mrnumber	= {1483265},
+  mrreviewer	= {Andrei I. Volodin},
+  doi		= {10.1016/S0167-7152(97)00005-9},
+  url		= {https://doi.org/10.1016/S0167-7152(97)00005-9}
+}
+
+@Article{	  chen:99:how,
+  author	= {Chen, Xia},
+  title		= {How often does a {H}arris recurrent {M}arkov chain
+		  recur?},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {27},
+  year		= {1999},
+  number	= {3},
+  pages		= {1324--1346},
+  issn		= {0091-1798},
+  mrclass	= {60F05 (60F15 60G50 60J05)},
+  mrnumber	= {1733150},
+  doi		= {10.1214/aop/1022677449},
+  url		= {https://doi.org/10.1214/aop/1022677449}
+}
+
+@Article{	  chen:99:law,
+  author	= {Chen, Xia},
+  title		= {The law of the iterated logarithm for functionals of
+		  {H}arris recurrent {M}arkov chains: self-normalization},
+  journal	= {J. Theoret. Probab.},
+  fjournal	= {Journal of Theoretical Probability},
+  volume	= {12},
+  year		= {1999},
+  number	= {2},
+  pages		= {421--445},
+  issn		= {0894-9840},
+  mrclass	= {60J05 (60F15)},
+  mrnumber	= {1684752},
+  mrreviewer	= {M. Cs\"{o}rg\H{o}},
+  doi		= {10.1023/A:1021630228280},
+  url		= {https://doi.org/10.1023/A:1021630228280}
+}
+
+@Article{	  chen:99:limit,
+  author	= {Chen, Xia},
+  title		= {Limit theorems for functionals of ergodic {M}arkov chains
+		  with general state space},
+  journal	= {Mem. Amer. Math. Soc.},
+  fjournal	= {Memoirs of the American Mathematical Society},
+  volume	= {139},
+  year		= {1999},
+  number	= {664},
+  pages		= {xiv+203},
+  issn		= {0065-9266},
+  mrclass	= {60J05 (60F05 60F15)},
+  mrnumber	= {1491814},
+  mrreviewer	= {Esa Nummelin},
+  doi		= {10.1090/memo/0664},
+  url		= {https://doi.org/10.1090/memo/0664}
+}
+
+@Article{	  chen:99:some,
+  author	= {Chen, Xia},
+  title		= {Some dichotomy results for functionals of {H}arris
+		  recurrent {M}arkov chains},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {83},
+  year		= {1999},
+  number	= {1},
+  pages		= {211--236},
+  issn		= {0304-4149},
+  mrclass	= {60J05 (60B11 60G40)},
+  mrnumber	= {1705608},
+  doi		= {10.1016/S0304-4149(99)00038-1},
+  url		= {https://doi.org/10.1016/S0304-4149(99)00038-1}
 }
 
 @Article{	  cheng.hu.ea:20:generalized,
@@ -14849,6 +15568,23 @@
 @Article{	  david.duplantier.ea:93:renormalization,
   author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
 		  Emmanuel},
+  title		= {Renormalization of crumpled manifolds},
+  journal	= {Phys. Rev. Lett.},
+  fjournal	= {Physical Review Letters},
+  volume	= {70},
+  year		= {1993},
+  number	= {15},
+  pages		= {2205--2208},
+  issn		= {0031-9007},
+  mrclass	= {82B41 (81T17 81T30 82B28)},
+  mrnumber	= {1214561},
+  doi		= {10.1103/PhysRevLett.70.2205},
+  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
+}
+
+@Article{	  david.duplantier.ea:93:renormalization*1,
+  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
+		  Emmanuel},
   title		= {Renormalization theory for interacting crumpled
 		  manifolds},
   journal	= {Nuclear Phys. B},
@@ -14864,23 +15600,6 @@
   mrnumber	= {1215176},
   doi		= {10.1016/0550-3213(93)90226-F},
   url		= {https://doi.org/10.1016/0550-3213(93)90226-F}
-}
-
-@Article{	  david.duplantier.ea:93:renormalization*1,
-  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
-		  Emmanuel},
-  title		= {Renormalization of crumpled manifolds},
-  journal	= {Phys. Rev. Lett.},
-  fjournal	= {Physical Review Letters},
-  volume	= {70},
-  year		= {1993},
-  number	= {15},
-  pages		= {2205--2208},
-  issn		= {0031-9007},
-  mrclass	= {82B41 (81T17 81T30 82B28)},
-  mrnumber	= {1214561},
-  doi		= {10.1103/PhysRevLett.70.2205},
-  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 
 @Article{	  david.duplantier.ea:94:renormalization,
@@ -16865,6 +17584,21 @@
 
 @Book{		  dunford.schwartz:88:linear,
   author	= {Dunford, Nelson and Schwartz, Jacob T.},
+  title		= {Linear operators. {P}art {I}},
+  series	= {Wiley Classics Library},
+  note		= {General theory, With the assistance of William G. Bade and
+		  Robert G. Bartle, Reprint of the 1958 original, A
+		  Wiley-Interscience Publication},
+  publisher	= {John Wiley \& Sons, Inc., New York},
+  year		= {1988},
+  pages		= {xiv+858},
+  isbn		= {0-471-60848-3},
+  mrclass	= {47-01 (46-01)},
+  mrnumber	= {1009162}
+}
+
+@Book{		  dunford.schwartz:88:linear*1,
+  author	= {Dunford, Nelson and Schwartz, Jacob T.},
   title		= {Linear operators. {P}art {II}},
   series	= {Wiley Classics Library},
   note		= {Spectral theory. Selfadjoint operators in Hilbert space,
@@ -16877,21 +17611,6 @@
   isbn		= {0-471-60847-5},
   mrclass	= {47-01 (46-01)},
   mrnumber	= {1009163}
-}
-
-@Book{		  dunford.schwartz:88:linear*1,
-  author	= {Dunford, Nelson and Schwartz, Jacob T.},
-  title		= {Linear operators. {P}art {I}},
-  series	= {Wiley Classics Library},
-  note		= {General theory, With the assistance of William G. Bade and
-		  Robert G. Bartle, Reprint of the 1958 original, A
-		  Wiley-Interscience Publication},
-  publisher	= {John Wiley \& Sons, Inc., New York},
-  year		= {1988},
-  pages		= {xiv+858},
-  isbn		= {0-471-60848-3},
-  mrclass	= {47-01 (46-01)},
-  mrnumber	= {1009162}
 }
 
 @Article{	  dunlap.gu.ea:20:fluctuations,
@@ -18242,20 +18961,6 @@
 @Book{		  erdelyi.magnus.ea:81:higher*1,
   author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
 		  Fritz and Tricomi, Francesco G.},
-  title		= {Higher transcendental functions. {V}ol. {II}},
-  note		= {Based on notes left by Harry Bateman, Reprint of the 1953
-		  original},
-  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
-  year		= {1981},
-  pages		= {xviii+396},
-  isbn		= {0-89874-069-X},
-  mrclass	= {33-02 (01A75)},
-  mrnumber	= {698780}
-}
-
-@Book{		  erdelyi.magnus.ea:81:higher*2,
-  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
-		  Fritz and Tricomi, Francesco G.},
   title		= {Higher transcendental functions. {V}ol. {I}},
   note		= {Based on notes left by Harry Bateman, With a preface by
 		  Mina Rees, With a foreword by E. C. Watson, Reprint of the
@@ -18266,6 +18971,20 @@
   isbn		= {0-89874-069-X},
   mrclass	= {33-02 (01A75)},
   mrnumber	= {698779}
+}
+
+@Book{		  erdelyi.magnus.ea:81:higher*2,
+  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
+		  Fritz and Tricomi, Francesco G.},
+  title		= {Higher transcendental functions. {V}ol. {II}},
+  note		= {Based on notes left by Harry Bateman, Reprint of the 1953
+		  original},
+  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
+  year		= {1981},
+  pages		= {xviii+396},
+  isbn		= {0-89874-069-X},
+  mrclass	= {33-02 (01A75)},
+  mrnumber	= {698780}
 }
 
 @Book{		  erdelyi:56:asymptotic,
@@ -28040,6 +28759,23 @@
   url		= {https://doi.org/10.1090/conm/234/03446}
 }
 
+@Article{	  huang.dikin.ea:04:three-dimensional,
+  author	= {Huang, Z. and Dikin, D. A. and Ding, W. and Qiao, Y. and
+		  Chen, X. and Fridman, Y. and Ruoff, R. S.},
+  title		= {Three-dimensional representation of curved nanowires},
+  journal	= {J. Microsc.},
+  fjournal	= {Journal of Microscopy},
+  volume	= {216},
+  year		= {2004},
+  number	= {3},
+  pages		= {206--214},
+  issn		= {0022-2720},
+  mrclass	= {Expansion},
+  mrnumber	= {2086418},
+  doi		= {10.1111/j.0022-2720.2004.01418.x},
+  url		= {https://doi.org/10.1111/j.0022-2720.2004.01418.x}
+}
+
 @Article{	  huang.khoshnevisan:17:on,
   author	= {Huang, Jingyu and Khoshnevisan, Davar},
   title		= {On the multifractal local behavior of parabolic stochastic
@@ -36846,6 +37582,15 @@
   mrreviewer	= {Andrey Sarantsev},
   doi		= {10.31390/josa.1.2.01},
   url		= {https://doi.org/10.31390/josa.1.2.01}
+}
+
+@Article{	  mueller.neuman:20:scaling,
+  title		= {Scaling Properties of a Moving Polymer},
+  author	= {Carl Mueller and Eyal Neuman},
+  year		= {2020},
+  month		= {June},
+  journal	= {preprint arXiv:2006.07189},
+  url		= {http://arXiv.org/abs/2006.07189}
 }
 
 @Article{	  mueller.neuman:22:self-repelling,
@@ -49525,23 +50270,6 @@
 
 @Article{	  tracy.widom:09:on,
   author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On {ASEP} with step {B}ernoulli initial condition},
-  journal	= {J. Stat. Phys.},
-  fjournal	= {Journal of Statistical Physics},
-  volume	= {137},
-  year		= {2009},
-  number	= {5-6},
-  pages		= {825--838},
-  issn		= {0022-4715},
-  mrclass	= {60K35 (82C22)},
-  mrnumber	= {2570751},
-  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
-  doi		= {10.1007/s10955-009-9867-1},
-  url		= {https://doi.org/10.1007/s10955-009-9867-1}
-}
-
-@Article{	  tracy.widom:09:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the distribution of a second-class particle in the
 		  asymmetric simple exclusion process},
   journal	= {J. Phys. A},
@@ -49556,6 +50284,23 @@
   mrreviewer	= {Pablo A. Ferrari},
   doi		= {10.1088/1751-8113/42/42/425002},
   url		= {https://doi.org/10.1088/1751-8113/42/42/425002}
+}
+
+@Article{	  tracy.widom:09:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On {ASEP} with step {B}ernoulli initial condition},
+  journal	= {J. Stat. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {137},
+  year		= {2009},
+  number	= {5-6},
+  pages		= {825--838},
+  issn		= {0022-4715},
+  mrclass	= {60K35 (82C22)},
+  mrnumber	= {2570751},
+  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
+  doi		= {10.1007/s10955-009-9867-1},
+  url		= {https://doi.org/10.1007/s10955-009-9867-1}
 }
 
 @Article{	  tracy.widom:09:total,
@@ -49775,6 +50520,23 @@
 
 @Article{	  tracy.widom:16:on,
   author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On the ground state energy of the {$\delta$}-function
+		  {B}ose gas},
+  journal	= {J. Phys. A},
+  fjournal	= {Journal of Physics. A. Mathematical and Theoretical},
+  volume	= {49},
+  year		= {2016},
+  number	= {29},
+  pages		= {294001, 17},
+  issn		= {1751-8113},
+  mrclass	= {82D05},
+  mrnumber	= {3512121},
+  doi		= {10.1088/1751-8113/49/29/294001},
+  url		= {https://doi.org/10.1088/1751-8113/49/29/294001}
+}
+
+@Article{	  tracy.widom:16:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the ground state energy of the delta-function {F}ermi
 		  gas},
   journal	= {J. Math. Phys.},
@@ -49789,23 +50551,6 @@
   mrreviewer	= {Reinhard Redlinger},
   doi		= {10.1063/1.4964252},
   url		= {https://doi.org/10.1063/1.4964252}
-}
-
-@Article{	  tracy.widom:16:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On the ground state energy of the {$\delta$}-function
-		  {B}ose gas},
-  journal	= {J. Phys. A},
-  fjournal	= {Journal of Physics. A. Mathematical and Theoretical},
-  volume	= {49},
-  year		= {2016},
-  number	= {29},
-  pages		= {294001, 17},
-  issn		= {1751-8113},
-  mrclass	= {82D05},
-  mrnumber	= {3512121},
-  doi		= {10.1088/1751-8113/49/29/294001},
-  url		= {https://doi.org/10.1088/1751-8113/49/29/294001}
 }
 
 @Article{	  tracy.widom:17:blocks,
